--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@types/recharts": "^1.8.29",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
+    "next-sitemap": "^4.2.3",
     "prisma": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.0"
+    "react-icons": "^5.0.0",
+    "recharts": "^2.15.0",
+    "zod": "^3.24.1",
+    "zoh": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
