--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.735.0",
+    "@aws-sdk/s3-request-presigner": "^3.735.0",
     "@prisma/client": "^6.2.1",
     "@types/recharts": "^1.8.29",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.0",
-    "next": "14.1.0",
+    "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "prisma": "^6.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.0.0",
     "recharts": "^2.15.0",
     "zod": "^3.24.1",
