--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@aws-sdk/client-s3": "^3.735.0",
     "@aws-sdk/s3-request-presigner": "^3.735.0",
     "@prisma/client": "^6.2.1",
     "@types/recharts": "^1.8.29",
+    "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.0",
     "next": "^15.1.6",
@@ -25,6 +27,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.0.0",
     "recharts": "^2.15.0",
+    "sonner": "^1.7.2",
+    "stripe": "^17.6.0",
     "zod": "^3.24.1",
     "zoh": "^0.0.0"
   },
