--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@aws-sdk/client-s3": "^3.735.0",
     "@aws-sdk/s3-request-presigner": "^3.735.0",
     "@langchain/openai": "^0.4.2",
+    "@langchain/pinecone": "^0.1.3",
     "@pinecone-database/pinecone": "^4.1.0",
     "@prisma/client": "^6.2.1",
     "@types/recharts": "^1.8.29",
     "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.0.0",
+    "jsdom": "^26.0.0",
     "langchain": "^0.3.15",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
