--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.0.0",
     "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^9.0.3",
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
     "stripe": "^17.6.0",
