--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/recharts": "^1.8.29",
     "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.0.0",
     "jsdom": "^26.0.0",
     "langchain": "^0.3.15",
@@ -29,6 +30,7 @@
     "next-sitemap": "^4.2.3",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.0.0",
