--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/stripe": "^8.0.417",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.0",
     "jsdom": "^26.0.0",
     "langchain": "^0.3.15",
