--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
+    "openai": "^4.85.1",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
