--- a/amplify.yml
+++ b/amplify.yml
@@ -5,14 +5,14 @@ applications:
       phases:
         preBuild:
           commands:
-            - npm ci
+            - npm ci --include=dev
         build:
           commands:
             - npm run build
       artifacts:
         baseDirectory: .next
         files:
-          - '**/*'
+          - "**/*"
       cache:
         paths:
           - node_modules/**/*
