--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^6.2.1",
     "@types/recharts": "^1.8.29",
     "@types/stripe": "^8.0.417",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
