--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@aws-sdk/client-s3": "^3.735.0",
+    "@aws-sdk/client-ses": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.735.0",
     "@langchain/openai": "^0.4.2",
     "@langchain/pinecone": "^0.1.3",
