--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@aws-sdk/client-s3": "^3.735.0",
+    "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/client-ses": "^3.758.0",
-    "@aws-sdk/s3-request-presigner": "^3.735.0",
+    "@aws-sdk/lib-storage": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@langchain/openai": "^0.4.2",
     "@langchain/pinecone": "^0.1.3",
     "@pinecone-database/pinecone": "^4.1.0",
     "@prisma/client": "^6.2.1",
+    "@types/cheerio": "^0.22.35",
+    "@types/pdfkit": "^0.13.9",
     "@types/recharts": "^1.8.29",
     "@types/stripe": "^8.0.417",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^11.0.0",
@@ -33,6 +39,8 @@
     "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "openai": "^4.85.1",
+    "pdfkit": "^0.16.0",
+    "pdfkit-table": "^0.1.99",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -44,6 +52,7 @@
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
     "stripe": "^17.6.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1",
     "zoh": "^0.0.0"
   },
